--- a/prototipo1Codesign/index.html
+++ b/prototipo1Codesign/index.html
@@ -32,7 +32,11 @@
     <img src="https://i.imgur.com/DPwz2W6.png" width="30%" height="30%">
     <p>Lorem ipsum dolor sit amet. Est ducimus dolores nam quia velit ea quia omnis ut repellendus ullam quo illum facere. Sed neque animi aut officia velit id totam nulla sit nesciunt rerum hic aspernatur dolorem. Ut impedit tempora qui minima rerum qui sint soluta hic quod dolorem aut doloremque deserunt ut aliquam voluptates qui dolores ullam. Id rerum quae sed cumque quia sit iste dolorum et repudiandae accusantium!</p>
   </div>
+    <footer>
+    <p></p>
+  </footer>
   <button onclick="topFunction()" id="myBtn" title="Go to top">Top</button>
+
   <script src="script.js"></script>
 </body>
 
