adicionando fundo do prototipo de media

--- a/prototipo1Codesign/presentation.html
+++ b/prototipo1Codesign/presentation.html
@@ -4,27 +4,18 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Presentation</title>
+    <title>Tela Inicial</title>
     <link rel="stylesheet" href="presentation.css">
 </head>
 <body>
-   <div class="front">
-    <section class="top">
-      <button onclick="window.location.href = 'index.html'"  id="coruja"><img src="source/coruja.png"></button>
-    </section>
+   
+    <div id="container">
+        <div class="balao">
+            <p>Boas vindas! Desça para conhecer o SMD!</p>
+          </div>
+    </div>
+  
 
-       <section class="meio"> 
-        <button onclick="window.location.href = 'index.html'" id="vagalume"><img src="source/vagalume.webp"></button>
-         <button onclick="window.location.href = 'index.html'" id="sapo"><img src="source/spo.webp"></button>
-       <section class="balao">
-            Mussum Ipsum, cacilds vidis litro abertis. Viva Forevis aptent taciti sociosqu ad litora torquent. Suco de cevadiss deixa as pessoas mais interessantis. Interagi no mé, cursus quis, vehicula ac nisi. Si num tem leite então bota uma pinga aí cumpadi!  
-       </section>
-      </section>
-        
-   </div> 
-
-
-        
 
 </body>
 </html>
