adicionando scroll suave

--- a/prototipo1Codesign/presentation.html
+++ b/prototipo1Codesign/presentation.html
@@ -9,13 +9,23 @@
 </head>
 <body>
    
-    <div id="container">
+    <div class="main">
         <div class="balao">
             <p>Boas vindas! Desça para conhecer o SMD!</p>
           </div>
     </div>
   
+<script>
+    /*document.querySelectorAll('a[href^="#"]').forEach(anchor => {
+  anchor.addEventListener('click', function (e) {
+    e.preventDefault();
 
+    document.querySelector(this.getAttribute('href')).scrollIntoView({
+      behavior: 'smooth'
+    });
+  });
+});*/
+</script>
 
 </body>
 </html>
