tentativas de deixar o fundo responsivo

--- a/prototipo1Codesign/presentation.html
+++ b/prototipo1Codesign/presentation.html
@@ -9,7 +9,8 @@
 </head>
 <body>
    
-    <div class="main">
+    <div class="container">
+      <img src="source/fundo_vertical.png" class="fundo">
         <div class="balao">
             <p>Boas vindas! Desça para conhecer o SMD!</p>
           </div>
