mudando funcionamento do fundo

--- a/prototipo1Codesign/presentation.html
+++ b/prototipo1Codesign/presentation.html
@@ -9,11 +9,8 @@
 </head>
 <body>
    
-    <div class="container">
-      <img src="source/fundo_vertical.png" class="fundo">
-        <div class="balao">
-            <p>Boas vindas! Desça para conhecer o SMD!</p>
-          </div>
+    <div class="grid">
+      
     </div>
   
 <script>
