adicionando imagens e deixando mais responsivo
imagens são balão e cachorro

--- a/prototipo1Codesign/presentation.html
+++ b/prototipo1Codesign/presentation.html
@@ -10,7 +10,13 @@
 <body>
    
     <div class="grid">
-      
+      <div id="cachorro">
+        <img src="source/cachorro.png">
+      </div>
+
+      <div id="balao">
+        <img src="source/balao.png">
+      </div>
     </div>
   
 <script>
