adicionando seta e corrigindo algumas coisas do grid

--- a/prototipo1Codesign/presentation.html
+++ b/prototipo1Codesign/presentation.html
@@ -17,6 +17,11 @@
       <div id="balao">
         <img src="source/balao.png">
       </div>
+
+      <div id="arrow">
+        <img src="source/arrow.png">
+      </div>
+
     </div>
   
 <script>
