adicionando textos da tela principal

--- a/prototipo1Codesign/trilhas.html
+++ b/prototipo1Codesign/trilhas.html
@@ -10,7 +10,7 @@
 </head>
 <div class="gridtrilhas">
   <div id="corujatrilhas">
-    <img src="https://i.imgur.com/3G3gPK4.png">
+    <img src="source/coruja">
   </div>
 </div>
 <body>
