--- a/prototipo1Codesign/presentation.html
+++ b/prototipo1Codesign/presentation.html
@@ -4,6 +4,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&display=swap" rel="stylesheet">
     <title>Tela Inicial</title>
     <link rel="stylesheet" href="presentation.css">
 </head>
@@ -16,12 +19,25 @@
 
       <div id="balao">
         <img src="source/balao.png">
+        <p>Au! Seja bem-vindo!
+          Desce a tela aí, vamos conhecer o SMD!</p>
       </div>
 
       <div id="arrow">
         <img src="source/arrow.png">
       </div>
 
+      <div id="textorow7col2">
+        <p><span>Sistemas e Mídias Digitais... </span>Um curso que vai desenvolver seu conhecimento em duas áreas: Sistemas Multimídia e Mídias Digitais.  </p>
+      </div>
+
+      <div id="textorow12col6">
+        <p>Os estudantes do SMD são <b>livres para escolher</b> como vão seguir seu caminho.</p>
+      </div>
+
+      <div id="textorow16col2">
+        <p>Mas existem quatro caminhos predefinidos que servem como guia, as chamadas <b>trilhas.</b></p>
+      </div>
     </div>
   
 <script>
