adicionando coruja na tela principal

--- a/prototipo1Codesign/presentation.html
+++ b/prototipo1Codesign/presentation.html
@@ -38,6 +38,10 @@
       <div id="textorow16col2">
         <p>Mas existem quatro caminhos predefinidos que servem como guia, as chamadas <b>trilhas.</b></p>
       </div>
+
+      <div id="corujacol4row29">
+        <img src="source/corujashadow.png">
+      </div>
     </div>
   
 <script>
