--- a/prototipo1Codesign/trilhas.html
+++ b/prototipo1Codesign/trilhas.html
@@ -10,10 +10,10 @@
 </head>
 <div class="gridtrilhas">
   <div id="corujatrilhas">
-    <img src="https://i.imgur.com/NBpfFes.png">
+    <img src="source/corujatrilhas.png">
   </div>
   <div id="balaotrilhas">
-    <img src="source/balao.png">
+    <img src="source/balaotrilhas.png">
     <h1>TRILHAS?!</h1>
     <p>Calma! Eu posso te contar um pouco mais sobre elas, mas antes me ajude a escolher sobre qual falar primeiro...</p>
     <p>Selecione algum desses itens</p>
