adicionando texto e balao na tela de trilhas

--- a/prototipo1Codesign/trilhas.html
+++ b/prototipo1Codesign/trilhas.html
@@ -6,6 +6,9 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Tela Inicial</title>
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;600;700&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="styletrilhas.css">
 </head>
 <div class="gridtrilhas">
@@ -16,7 +19,7 @@
     <img src="source/balaotrilhas.png">
     <h1>TRILHAS?!</h1>
     <p>Calma! Eu posso te contar um pouco mais sobre elas, mas antes me ajude a escolher sobre qual falar primeiro...</p>
-    <p>Selecione algum desses itens</p>
+    <p id="select">Selecione algum desses itens</p>
   </div>
 </div>
 <body>
