adicionando animais na tela principal

--- a/prototipo1Codesign/presentation.html
+++ b/prototipo1Codesign/presentation.html
@@ -42,6 +42,14 @@
       <div id="corujacol4row29">
         <img src="source/corujashadow.png">
       </div>
+
+      <div id="cachorrocol8row33">
+        <img src="source/cachorroterra.png">
+      </div>
+
+      <div id="sapocol10row31">
+        <img src="source/sapo.png">
+      </div>
     </div>
   
 <script>
