--- a/prototipo1Codesign/presentation.html
+++ b/prototipo1Codesign/presentation.html
@@ -40,7 +40,9 @@
       </div>
 
       <div id="corujacol4row29">
-        <img src="source/corujashadow.png">
+        <a href="trilhas.html">
+          <button id="botaotrilhas"><img src="source/corujashadow.png"></button>
+       </a>
       </div>
 
       <div id="cachorrocol8row33">
