--- a/prototipo1Codesign/trilhas.html
+++ b/prototipo1Codesign/trilhas.html
@@ -21,6 +21,11 @@
     <p>Calma! Eu posso te contar um pouco mais sobre elas, mas antes me ajude a escolher sobre qual falar primeiro...</p>
     <p id="select">Selecione algum desses itens</p>
   </div>
+  <div id="botaovoltar">
+    <a href="presentation.html">
+       <button id="botaovoltar"><img src="source/botaovoltar.png"></button>
+    </a> 
+  </div>
 </div>
 <body>
   <script src="script.js"></script>
