--- a/prototipo1Codesign/presentation.html
+++ b/prototipo1Codesign/presentation.html
@@ -8,7 +8,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&display=swap" rel="stylesheet">
     <title>Tela Inicial</title>
-    <link rel="stylesheet" href="presentation.css">
+    <link rel="stylesheet" href="styles/presentation.css">
 </head>
 <body>
    
