adicionando flex na pagina projetos

--- a/prototipo1Codesign/projetos.html
+++ b/prototipo1Codesign/projetos.html
@@ -11,8 +11,22 @@
     <link rel="stylesheet" href="projetos.css">
 </head>
 <body>
-  <div class="gridprojetos">
-    a
+
+  <div class="return">
+    <img src="source/botaovoltar.png">
+  </div>  
+  <div class="header">
+    
   </div>
+
+  <div class="bloco1">
+
+  </div>
+
+  <div class="bloco2">
+
+  </div>
+
+  .cont
 </body>
 </html>
