adicionando conteúdo placeholder na tela de projetos

--- a/prototipo1Codesign/projetos.html
+++ b/prototipo1Codesign/projetos.html
@@ -27,6 +27,40 @@
 
   </div>
 
-  .cont
+  <div class="main">
+    <div class="nav">
+
+    </div>
+    <div class="content"> <!--AQUI É ONDE O CONTEUDO VAI FICAR-->
+        <img src="source/thumb.png">
+        <img src="source/thumb.png">
+        <img src="source/thumb.png">
+        <img src="source/thumb.png">
+        <img src="source/thumb.png">
+        <img src="source/thumb.png">
+        <img src="source/thumb.png">
+        <img src="source/thumb.png">
+        <img src="source/thumb.png">
+        <img src="source/thumb.png">
+        <img src="source/thumb.png">
+        <img src="source/thumb.png">
+        <img src="source/thumb.png">
+        <img src="source/thumb.png">
+        <img src="source/thumb.png">
+        <img src="source/thumb.png">
+        <img src="source/thumb.png">
+        <img src="source/thumb.png">
+        <img src="source/thumb.png">
+        <img src="source/thumb.png">
+        <img src="source/thumb.png">
+        <img src="source/thumb.png">
+        <img src="source/thumb.png">
+        <img src="source/thumb.png">
+    </div>
+   </div>
+
+   <div class="bloco3">
+
+   </div>
 </body>
 </html>
