adicionando titulo e começando navbar na tela de projetos

--- a/prototipo1Codesign/projetos.html
+++ b/prototipo1Codesign/projetos.html
@@ -16,7 +16,7 @@
     <img src="source/botaovoltar.png">
   </div>  
   <div class="header">
-    
+    <h1>PROJETOS</h1>
   </div>
 
   <div class="bloco1">
@@ -29,7 +29,20 @@
 
   <div class="main">
     <div class="nav">
+        <div id="nav_design">
+            <p>Design</p>
+            <span id="lowerline"></span>
+        </div>
+        <div id="nav_sistemas">
 
+        </div>
+        <div id="nav_jogos">
+
+        </div>
+        <div id="nav_animacao">
+
+        </div>
+        
     </div>
     <div class="content"> <!--AQUI É ONDE O CONTEUDO VAI FICAR-->
         <img src="source/thumb.png">
