--- a/prototipo1Codesign/projetos.html
+++ b/prototipo1Codesign/projetos.html
@@ -7,13 +7,15 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&display=swap" rel="stylesheet">
-    <title>Tela Inicial</title>
-    <link rel="stylesheet" href="projetos.css">
+    <title>Projetos</title>
+    <link rel="stylesheet" href="styles/projetos.css">
 </head>
 <body>
 
   <div class="return">
-    <img src="source/botaovoltar.png">
+    <a href="presentation.html">
+      <button id="botaovoltar"><img src="source/botaovoltar.png"></button>
+    </a>
   </div>  
   <div class="header">
     <h1>PROJETOS</h1>
