botões egressos e voltar atualizados

--- a/prototipo1Codesign/presentation.html
+++ b/prototipo1Codesign/presentation.html
@@ -46,11 +46,15 @@
       </div>
 
       <div id="cachorrocol8row33">
-        <img src="source/cachorroterra.png">
+        <a href="projetos.html">
+           <button id="botaoprojetos"><img src="source/cachorroterra.png"></button>
+      </a>
       </div>
 
       <div id="sapocol10row31">
-        <img src="source/sapo.png">
+        <a href="egressos.html">
+           <button id="botaoegressos"><img src="source/sapo.png"></button>
+      </a>
       </div>
     </div>
   
