adicionando balao de texto na tela de projetos

--- a/prototipo1Codesign/projetos.html
+++ b/prototipo1Codesign/projetos.html
@@ -17,6 +17,9 @@
   </div>  
   <div class="header">
     <h1>PROJETOS</h1>
+    <div id="balaoprojetos">
+      <img src="source/balaoprojetos.png">
+    </div>
   </div>
 
   <div class="bloco1">
