Teste para botão voltar scrollar a página inicial pra baixo

--- a/prototipo1Codesign/trilhas.html
+++ b/prototipo1Codesign/trilhas.html
@@ -24,7 +24,7 @@
   </div>
   <div id="botaovoltar">
     <a href="presentation.html">
-       <button id="botaovoltar"><img src="source/botaovoltar.png"></button>
+       <button id="botaovoltar" onclick="scrollarpara()"><img src="source/botaovoltar.png"></button>
     </a> 
   </div>
 </div>
