adicionando texto no balao de projetos

--- a/prototipo1Codesign/projetos.html
+++ b/prototipo1Codesign/projetos.html
@@ -21,6 +21,7 @@
     <h1>PROJETOS</h1>
     <div id="balaoprojetos">
       <img src="source/balaoprojetos.png">
+      <p>Olha só! Aqui você pode encontrar algumas produções do SMD.</p>
     </div>
   </div>
 
