adicionando cachorro na tela de projetos

--- a/prototipo1Codesign/projetos.html
+++ b/prototipo1Codesign/projetos.html
@@ -23,6 +23,9 @@
       <img src="source/balaoprojetos.png">
       <p>Olha só! Aqui você pode encontrar algumas produções do SMD.</p>
     </div>
+    <div id="cachorroprojetos">
+      <img src="source/cachorroprojetos.png">
+    </div>
   </div>
 
   <div class="bloco1">
