--- a/prototipo1Codesign/presentation.html
+++ b/prototipo1Codesign/presentation.html
@@ -24,7 +24,7 @@
       </div>
 
       <div id="arrow">
-        <img src="source/arrow.png">
+        <button id="botaoscrollprabaixo" onclick="scrollarprabaixo()"><img src="source/arrow.png"></button>
       </div>
 
       <div id="textorow7col2">
@@ -57,18 +57,7 @@
       </a>
       </div>
     </div>
-  
-<script>
-    /*document.querySelectorAll('a[href^="#"]').forEach(anchor => {
-  anchor.addEventListener('click', function (e) {
-    e.preventDefault();
 
-    document.querySelector(this.getAttribute('href')).scrollIntoView({
-      behavior: 'smooth'
-    });
-  });
-});*/
-</script>
 <script src="script.js"></script>
 
 </body>
