--- a/prototipo1Codesign/projetos.html
+++ b/prototipo1Codesign/projetos.html
@@ -13,9 +13,7 @@
 <body>
 
   <div class="return">
-    <a href="presentation.html">
-      <button id="botaovoltar"><img src="source/botaovoltar.png"></button>
-    </a>
+      <button id="botaovoltar" onclick="voltareScrollar()"><img src="source/botaovoltar.png"></button>
   </div>  
   <div class="header">
     <h1>PROJETOS</h1>
@@ -80,5 +78,6 @@
    <div class="bloco3">
 
    </div>
+   <script src="script.js"></script>
 </body>
 </html>
