--- a/prototipo1Codesign/trilhas.html
+++ b/prototipo1Codesign/trilhas.html
@@ -23,9 +23,7 @@
     <p id="select">Selecione algum desses itens</p>
   </div>
   <div id="botaovoltar">
-    <a href="presentation.html">
-       <button id="botaovoltar" onclick="scrollarpara()"><img src="source/botaovoltar.png"></button>
-    </a> 
+       <button id="botaovoltar" onclick="voltareScrollar()"><img src="source/botaovoltar.png"></button>
   </div>
 </div>
 
