adicionando trilhas na tela de projetos

--- a/prototipo1Codesign/projetos.html
+++ b/prototipo1Codesign/projetos.html
@@ -41,13 +41,16 @@
             <span id="lowerline"></span>
         </div>
         <div id="nav_sistemas">
-
+            <p>Sistemas</p>
+            <span id="lowerline"></span>
         </div>
         <div id="nav_jogos">
-
+            <p>Jogos</p>
+            <span id="lowerline"></span>
         </div>
         <div id="nav_animacao">
-
+            <p>Animação</p>
+            <span id="lowerline"></span>
         </div>
         
     </div>
