--- a/prototipo1Codesign/projetos.html
+++ b/prototipo1Codesign/projetos.html
@@ -1,90 +1,119 @@
 <!DOCTYPE html>
 <html lang="pt-br">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&display=swap" rel="stylesheet">
     <title>Projetos</title>
     <link rel="stylesheet" href="styles/projetos.css">
+    <script src="script.js" defer></script>
 </head>
+
 <body>
-
-  <div class="return">
-      <button id="botaovoltar" onclick="voltareScrollar()"><img src="source/botaovoltar.png"></button>
-  </div>  
-  <div class="header">
-    <h1>PROJETOS</h1>
-    <div id="balaoprojetos">
-      <img src="source/balaoprojetos.png">
-      <p>Olha só! Aqui você pode encontrar algumas produções do SMD.</p>
-    </div>
-    <div id="cachorroprojetos">
-      <img src="source/cachorroprojetos.png">
-    </div>
-  </div>
-
-  <div class="bloco1">
-
-  </div>
-
-  <div class="bloco2">
-
-  </div>
-
-  <div class="main">
-    <div class="nav">
-        <div id="nav_design">
-            <p>Design</p>
-            <span id="lowerline"></span>
+    <header>
+        <div id="return">
+            <button id="but-back" onclick="voltareScrollar()"><img src="source/botaovoltar.png"></button>
         </div>
-        <div id="nav_sistemas">
-            <p>Sistemas</p>
-            <span id="lowerline"></span>
+        <div id="character-content">
+            <h1>PROJETOS</h1>
+            <div id="bubble">
+                <img src="source/balaoprojetos.png">
+                <p>Olha só! Aqui você pode encontrar algumas produções do SMD.</p>
+            </div>
+            <div id="img-dog">
+                <img src="source/cachorroprojetos.png">
+            </div>
         </div>
-        <div id="nav_jogos">
-            <p>Jogos</p>
-            <span id="lowerline"></span>
-        </div>
-        <div id="nav_animacao">
-            <p>Animação</p>
-            <span id="lowerline"></span>
-        </div>
-        
-    </div>
-    <div class="content"> <!--AQUI É ONDE O CONTEUDO VAI FICAR-->
-        <img src="source/thumb.png">
-        <img src="source/thumb.png">
-        <img src="source/thumb.png">
-        <img src="source/thumb.png">
-        <img src="source/thumb.png">
-        <img src="source/thumb.png">
-        <img src="source/thumb.png">
-        <img src="source/thumb.png">
-        <img src="source/thumb.png">
-        <img src="source/thumb.png">
-        <img src="source/thumb.png">
-        <img src="source/thumb.png">
-        <img src="source/thumb.png">
-        <img src="source/thumb.png">
-        <img src="source/thumb.png">
-        <img src="source/thumb.png">
-        <img src="source/thumb.png">
-        <img src="source/thumb.png">
-        <img src="source/thumb.png">
-        <img src="source/thumb.png">
-        <img src="source/thumb.png">
-        <img src="source/thumb.png">
-        <img src="source/thumb.png">
-        <img src="source/thumb.png">
-    </div>
-   </div>
-
-   <div class="bloco3">
-
-   </div>
-   <script src="script.js"></script>
+        <nav id="menu-content">
+            <ul id="menu">
+                <li class="item-menu" name="design">Design</li>
+                <li class="item-menu" name="sistemas">Sistemas</li>
+                <li class="item-menu" name="jogos">Jogos</li>
+                <li class="item-menu" name="audiovisual">Audiovisual</li>
+            </ul>
+        </nav>
+    </header>
+    <main>
+        <div class="content">
+            <div class="card-project">
+                <div id="card-img">
+                    <img src="./source/project.png" alt="">
+                </div>
+                <div id="card-text">
+                    <h4>Título</h4>
+                    <p>Este projeto é sobre isso isso isso.</p>
+                </div>
+            </div>
+            <div class="card-project">
+                <div id="card-img">
+                    <img src="./source/project.png" alt="">
+                </div>
+                <div id="card-text">
+                    <h4>Título</h4>
+                    <p>Este projeto é sobre isso isso isso.</p>
+                </div>
+            </div>
+            <div class="card-project">
+                <div id="card-img">
+                    <img src="./source/project.png" alt="">
+                </div>
+                <div id="card-text">
+                    <h4>Título</h4>
+                    <p>Este projeto é sobre isso isso isso.</p>
+                </div>
+            </div>
+            <div class="card-project">
+                <div id="card-img">
+                    <img src="./source/project.png" alt="">
+                </div>
+                <div id="card-text">
+                    <h4>Título</h4>
+                    <p>Este projeto é sobre isso isso isso.</p>
+                </div>
+            </div>
+            <div class="content">
+                <div class="card-project">
+                    <div id="card-img">
+                        <img src="./source/project.png" alt="">
+                    </div>
+                    <div id="card-text">
+                        <h4>Título</h4>
+                        <p>Este projeto é sobre isso isso isso.</p>
+                    </div>
+                </div>
+                <div class="card-project">
+                    <div id="card-img">
+                        <img src="./source/project.png" alt="">
+                    </div>
+                    <div id="card-text">
+                        <h4>Título</h4>
+                        <p>Este projeto é sobre isso isso isso.</p>
+                    </div>
+                </div>
+                <div class="card-project">
+                    <div id="card-img">
+                        <img src="./source/project.png" alt="">
+                    </div>
+                    <div id="card-text">
+                        <h4>Título</h4>
+                        <p>Este projeto é sobre isso isso isso.</p>
+                    </div>
+                </div>
+                <div class="card-project">
+                    <div id="card-img">
+                        <img src="./source/project.png" alt="">
+                    </div>
+                    <div id="card-text">
+                        <h4>Título</h4>
+                        <p>Este projeto é sobre isso isso isso.</p>
+                    </div>
+                </div>
+            </div>
+    </main>
 </body>
+
 </html>
