add project-item + link + videoplayer

--- a/prototipo1Codesign/projetos.html
+++ b/prototipo1Codesign/projetos.html
@@ -30,89 +30,25 @@
         </div>
         <nav id="menu-content">
             <ul id="menu">
-                <li class="item-menu" name="design">Design</li>
-                <li class="item-menu" name="sistemas">Sistemas</li>
-                <li class="item-menu" name="jogos">Jogos</li>
-                <li class="item-menu" name="audiovisual">Audiovisual</li>
+                <li class="item-menu" name="design" id="0" onclick="showList(this.id, projects)">Design</li>
+                <li class="item-menu" name="sistemas" id="1" onclick="showList(this.id, projects)">Sistemas</li>
+                <li class="item-menu" name="jogos" id="2" onclick="showList(this.id, projects)">Jogos</li>
+                <li class="item-menu" name="audiovisual" id="3" onclick="showList(this.id, projects)">Audiovisual</li>
             </ul>
         </nav>
     </header>
     <main>
         <div class="content">
-            <div class="card-project">
-                <div id="card-img">
-                    <img src="./source/project.png" alt="">
-                </div>
-                <div id="card-text">
-                    <h4>Título</h4>
-                    <p>Este projeto é sobre isso isso isso.</p>
-                </div>
+            <!-- <div class="card-project">
+            <div id="card-img">
+                <img src="./source/project.png" alt="">
             </div>
-            <div class="card-project">
-                <div id="card-img">
-                    <img src="./source/project.png" alt="">
-                </div>
-                <div id="card-text">
-                    <h4>Título</h4>
-                    <p>Este projeto é sobre isso isso isso.</p>
-                </div>
+            <div id="card-text">
+                <h4>Título</h4>
+                <p>Este projeto é sobre isso isso isso.</p>
             </div>
-            <div class="card-project">
-                <div id="card-img">
-                    <img src="./source/project.png" alt="">
-                </div>
-                <div id="card-text">
-                    <h4>Título</h4>
-                    <p>Este projeto é sobre isso isso isso.</p>
-                </div>
-            </div>
-            <div class="card-project">
-                <div id="card-img">
-                    <img src="./source/project.png" alt="">
-                </div>
-                <div id="card-text">
-                    <h4>Título</h4>
-                    <p>Este projeto é sobre isso isso isso.</p>
-                </div>
-            </div>
-            <div class="content">
-                <div class="card-project">
-                    <div id="card-img">
-                        <img src="./source/project.png" alt="">
-                    </div>
-                    <div id="card-text">
-                        <h4>Título</h4>
-                        <p>Este projeto é sobre isso isso isso.</p>
-                    </div>
-                </div>
-                <div class="card-project">
-                    <div id="card-img">
-                        <img src="./source/project.png" alt="">
-                    </div>
-                    <div id="card-text">
-                        <h4>Título</h4>
-                        <p>Este projeto é sobre isso isso isso.</p>
-                    </div>
-                </div>
-                <div class="card-project">
-                    <div id="card-img">
-                        <img src="./source/project.png" alt="">
-                    </div>
-                    <div id="card-text">
-                        <h4>Título</h4>
-                        <p>Este projeto é sobre isso isso isso.</p>
-                    </div>
-                </div>
-                <div class="card-project">
-                    <div id="card-img">
-                        <img src="./source/project.png" alt="">
-                    </div>
-                    <div id="card-text">
-                        <h4>Título</h4>
-                        <p>Este projeto é sobre isso isso isso.</p>
-                    </div>
-                </div>
-            </div>
+        </div> --->
+        </div>
     </main>
 </body>
 
