--- a/prototipo1Codesign/index.html
+++ b/prototipo1Codesign/index.html
@@ -33,7 +33,11 @@
 
       <div id="cachorrocol8row33">
         <a href="./views/projects.html">
-          <button id="botaoprojetos"><img src="./images/dog_projects.png"></button>
+          <button id="botaoprojetos">
+            <img class="cachorro-normal" src="./images/dog_projects.png">
+            <img class="cachorro-levantando" src="./images/dog_hover.png">
+            
+          </button>
         </a>
       </div>
 
