adicionando balao no index

--- a/prototipo1Codesign/index.html
+++ b/prototipo1Codesign/index.html
@@ -21,8 +21,14 @@
 <body>
   <main>
     <div class="grid">
+
       <div id="dog">
         <img src="./images/dog_space.png">
+      </div>
+      <div id="balao">
+        <img src="./source/balao.png">
+        <p>Au! Seja bem-vindo!
+          Desce a tela aí, vamos conhecer o SMD!</p>
       </div>
 
       <div id="corujacol4row29">
