--- a/prototipo1Codesign/index.html
+++ b/prototipo1Codesign/index.html
@@ -11,7 +11,7 @@
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link
-    href="https://fonts.googleapis.com/css2?family=Fredoka:wght@300&family=Rubik:wght@500&family=Staatliches&display=swap"
+    href="https://fonts.googleapis.com/css2?family=Fredoka:wght@300;400&family=Rubik:wght@500&family=Staatliches&display=swap"
     rel="stylesheet">
   <link rel="stylesheet" href="./styles/style.css">
   <link rel="stylesheet" href="./styles/home.css">
@@ -26,15 +26,20 @@
         <img src="./images/dog_space.png">
       </div>
       <div id="balao">
-        <img src="./source/balao.png">
+        <img src="/images/main_cloud.png">
         <p>Au! Seja bem-vindo!
           Desce a tela aí, vamos conhecer o SMD!</p>
       </div>
 
       <div id="corujacol4row29">
         <a href="./views/trails.html">
-          <button id="botaotrilhas"><img src="./images/owl_trails.png"></button>
+          <button id="botaotrilhas">
+            <img class="coruja-normal"src="./images/owl_trails.png">
+            <img class="coruja-levantando"src="./images/owl_hover.png">
+          </button>
+          
         </a>
+        <img class="ellipsis-text"src="images/ellipsis_text.png" alt="">
       </div>
 
       <div id="cachorrocol8row33">
@@ -45,12 +50,18 @@
             
           </button>
         </a>
+        <img class="ellipsis-text"src="images/ellipsis_text.png" alt="">
       </div>
 
       <div id="sapocol10row31">
         <a href="./views/graduates.html">
-          <button id="botaoegressos"><img src="./images/frog_graduates.png"></button>
+          <button id="botaoegressos">
+            <img class="sapo-normal" src="./images/frog_graduates.png">
+            <img class="sapo-levantando" src="./images/frog_hover.png">
+
+          </button>
         </a>
+        <img class="ellipsis-text"src="images/ellipsis_text.png" alt="">
       </div>
     </div>
   </main>
