reposicionando balao de texto

--- a/prototipo1Codesign/index.html
+++ b/prototipo1Codesign/index.html
@@ -26,7 +26,7 @@
         <img src="./images/dog_space.png">
       </div>
       <div id="balao">
-        <img src="/images/main_cloud.png">
+        <img src="./images/main_cloud.png">
         <p>Au! Seja bem-vindo!
           Desce a tela aí, vamos conhecer o SMD!</p>
       </div>
